--- a/flaskr/templates/contact.html
+++ b/flaskr/templates/contact.html
@@ -9,7 +9,7 @@
 
 <div id="main-content" class="main-content" style="">
     <!--title banner-->
-    <header class="contact-banner">
+    <header class="screen_titles">
         {% include 'includes/_messages.html' %}
         <div class="container-md text-center" style="max-width: 100%;">
             <div class="row justify-content-start">
