--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -5,13 +5,13 @@
         <link rel="preload" href="" as="image"/>
     {% endblock %}
     {% block body %}
-    <div id="" class="home-main-content">
+    <div id="" class="">
 
         <!--welcome preview-->
         <div class="container-md info-sections" style="">
             <div class="row justify-content-center">
                 <div class="col-md info-sections-title">
-                    <h1 class="display-6 font-medium">WELCOME</h1>
+                    <h1 class="display-6 font-medium">Welcome to Allan Gilbert Builders</h1>
                     <hr class="info-title-hr">
                 </div>
             </div>
@@ -30,7 +30,7 @@
         <div class="container-md info-sections" style="">
             <div class="row justify-content-center">
                 <div class="col-md info-sections-title">
-                    <h1 class="display-6 font-medium">ABOUT US</h1>
+                    <h1 class="display-6 font-medium">About Us</h1>
                     <hr class="info-title-hr">
                 </div>
             </div>
@@ -40,7 +40,7 @@
                         Our story is one of passion, craftsmanship and a commitment to
                         excellence. A family owned and operated business, three generations
                         and growing, we have been dedicated to crafting exceptional living
-                        spaces for our clients surrounding the lakes region.
+                        spaces for our clients surrounding the Lakes Region.
                     </p>
                 </div>
             </div>
@@ -49,7 +49,7 @@
         <div class="container-md info-sections" style="">
             <div class="row justify-content-center">
                 <div class="col-md info-sections-title">
-                    <h1 class="display-6 font-medium">OUR SERVICES</h1>
+                    <h1 class="display-6 font-medium">Our Services</h1>
                     <hr class="info-title-hr">
                 </div>
             </div>
@@ -74,10 +74,6 @@
                               <path d="M11.07 9.047a1.5 1.5 0 0 0-1.742.26l-.02.021a1.5 1.5 0 0 0-.261 1.742 1.5 1.5 0 0 0 0 2.86 1.504 1.504 0 0 0-.12 1.07H3.5A1.5 1.5 0 0 1 2 13.5V9.293l6-6 4.724 4.724a1.5 1.5 0 0 0-1.654 1.03Z"/>
                               <path d="m13.158 9.608-.043-.148c-.181-.613-1.049-.613-1.23 0l-.043.148a.64.64 0 0 1-.921.382l-.136-.074c-.561-.306-1.175.308-.87.869l.075.136a.64.64 0 0 1-.382.92l-.148.045c-.613.18-.613 1.048 0 1.229l.148.043a.64.64 0 0 1 .382.921l-.074.136c-.306.561.308 1.175.869.87l.136-.075a.64.64 0 0 1 .92.382l.045.149c.18.612 1.048.612 1.229 0l.043-.15a.64.64 0 0 1 .921-.38l.136.074c.561.305 1.175-.309.87-.87l-.075-.136a.64.64 0 0 1 .382-.92l.149-.044c.612-.181.612-1.049 0-1.23l-.15-.043a.64.64 0 0 1-.38-.921l.074-.136c.305-.561-.309-1.175-.87-.87l-.136.075a.64.64 0 0 1-.92-.382ZM12.5 14a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3"/>
                             </svg>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-house-gear" viewBox="0 0 16 16">
-                              <path d="M7.293 1.5a1 1 0 0 1 1.414 0L11 3.793V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v3.293l2.354 2.353a.5.5 0 0 1-.708.708L8 2.207l-5 5V13.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 2 13.5V8.207l-.646.647a.5.5 0 1 1-.708-.708z"/>
-                              <path d="M11.886 9.46c.18-.613 1.048-.613 1.229 0l.043.148a.64.64 0 0 0 .921.382l.136-.074c.561-.306 1.175.308.87.869l-.075.136a.64.64 0 0 0 .382.92l.149.045c.612.18.612 1.048 0 1.229l-.15.043a.64.64 0 0 0-.38.921l.074.136c.305.561-.309 1.175-.87.87l-.136-.075a.64.64 0 0 0-.92.382l-.045.149c-.18.612-1.048.612-1.229 0l-.043-.15a.64.64 0 0 0-.921-.38l-.136.074c-.561.305-1.175-.309-.87-.87l.075-.136a.64.64 0 0 0-.382-.92l-.148-.044c-.613-.181-.613-1.049 0-1.23l.148-.043a.64.64 0 0 0 .382-.921l-.074-.136c-.306-.561.308-1.175.869-.87l.136.075a.64.64 0 0 0 .92-.382l.045-.148ZM14 12.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0"/>
-                            </svg>
 
                         <p class="services-subsection-title">Home Building</p>
                     </div>
@@ -90,9 +86,7 @@
                         </p>
                     </div>
                 </div>
-            </div>
             <!--general contracting-->
-            <div class="container-md services-subsection">
                 <div class="row">
                     <div class="col-md font-med-bold">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-file-earmark-text-fill" viewBox="0 0 16 16">
@@ -109,27 +103,21 @@
                         </p>
                     </div>
                 </div>
-            </div>
             <!--interior remodeling-->
-            <div class="container-md services-subsection">
                 <div class="row">
                     <div class="col-md font-med-bold">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-palette-fill" viewBox="0 0 16 16">
-                          <path d="M12.433 10.07C14.133 10.585 16 11.15 16 8a8 8 0 1 0-8 8c1.996 0 1.826-1.504 1.649-3.08-.124-1.101-.252-2.237.351-2.92.465-.527 1.42-.237 2.433.07M8 5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m4.5 3a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3M5 6.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m.5 6.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3"/>
-                        </svg>
-                        <p class="services-subsection-title">Interior Remodeling</p>
+
+                        <p class="services-subsection-title"></p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md">
                         <p>
-                            Our team ensures that every aspect of your project is executed with
-                            precision and care.
+
                         </p>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
