--- a/flaskr/templates/testimonials.html
+++ b/flaskr/templates/testimonials.html
@@ -8,7 +8,7 @@
 
 <div id="main-content" class="" style="">
     <!--title banner-->
-    <header class="testimonial-banner">
+    <header class="screen_title">
         {% include 'includes/_messages.html' %}
         <div class="container-md text-center" style="max-width: 100%;">
             <div class="row justify-content-start">
