--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -38,14 +38,14 @@
                             <div class="container-md">
                                 <div class="row justify-content-center">
                                     <div class="col-md-6" style="padding-bottom: 15.0rem;">
-                                        <div style="background-color: rgba(255,255,255,.5);">
+                                        <div style="">
                                             <h1 style="font-weight: 600;" class="text-dark">Project Gallery</h1>
                                         </div>
 
                                     </div>
                                 </div>
                                 <div class="row justify-content-end">
-                                    <div class="col-sm-2" style="background-color: #f0f0f0; opacity: 0.8;">
+                                    <div class="col-sm-auto" style="">
                                         <p class="text-lg font-med-bold"><a href="{{ url_for('blueprint.view_project', project_id=photo.project_id) }}">{{photo.project_name}}</a></p>
                                     </div>
                                 </div>
@@ -68,13 +68,9 @@
     </header>
 
     <!--dropdowns-->
-    <div class="container-md" style="max-width: 100%; padding-top: 2%; background-color: rgba(255, 255, 255, 0.8);">
+    <div class="container-md" style="max-width: 100%; padding-top: 2%;">
         <form name="dropdown_form" method="POST" action="{{ url_for('blueprint.gallery', page='1') }}">
-            <div class="row justify-content-between">
-                <div class="col-md-2" style="text-align: center; padding: 0px 20px;">
-                    <p class="text-lg">{{ form.sort_by.label }}</p>
-                    <p class="text-lg">{{ form.sort_by(onchange="this.form.submit();") }}</p>
-                </div>
+            <div class="row justify-content-end">
 
                 {% if session.logged_in %}
                 <div class="col-md-auto" style="text-align: center; padding: 0px 20px;">
@@ -99,7 +95,7 @@
             {% for project, thumbnail in project_data %}
             <div class="col-md-4 img-thumbnail" style="padding: 15px 15px; margin-top: 3%; margin-bottom: 3%; background-image: url({{ thumbnail }}); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
                 <a href="{{ url_for('blueprint.view_project', project_id=project[0]) }}" style="text-decoration: none;" class="text-dark">
-                    <div class="row justify-content-center text-center" style="background-color: #f0f0f0; opacity: 0.8;">
+                    <div class="row justify-content-center text-center">
                         <h5 class="text-center font-med-bold">{{ project[1] }}</h5>
                         <p class="text-md">{{ project[4] }}, NH</p>
                         <!--<img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="">-->
