--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <!--home building-->
-            <div class="container-md services-subsection">
+            <div class="container-md">
                 <div class="row">
                     <div class="col-md font-med-bold">
                         <!--which icon?-->
@@ -81,8 +81,9 @@
                 <div class="row">
                     <div class="col-md">
                         <p>
-                            We specialize in building custom homes that are not just structure but
-                            reflections of your lifestyle and personality.
+                            We are a customer-focused company.  By using  superior materials, equipment and reputable
+                            subcontractors we specialize in building custom homes that are not only structural but
+                            reflective of our homeowner’s lifestyle and personality.
                         </p>
                     </div>
                 </div>
@@ -98,8 +99,9 @@
                 <div class="row">
                     <div class="col-md">
                         <p>
-                            Our team ensures that every aspect of your project is executed with
-                            precision and care.
+                            Fully licensed and insured, with Allan Gilbert Builders you can take advantage of multiple
+                            services without any worries. With complete dedication,  we provide general contractor and
+                            construction services to our future clients.
                         </p>
                     </div>
                 </div>
