--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -6,7 +6,7 @@
 
      <form action="" method="POST">
       <div class="text-center mb-4 p-5">
-        <h1 class="display-5 font-weight-normal">Admin Login</h1>
+        <h1 class="display-5 font-weight-normal text-light">Admin Login</h1>
       </div>
 
       <div align="center">
