--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -121,11 +121,11 @@ p
     }
 
     footer {
-        margin-top: auto;
         font-weight: 600;
         font-size: 0.8rem;
         text-align: center;
-        background-color: rgba(240, 240, 240, 1.0);
+        /*background-color: rgba(240, 240, 240, 1.0);*/
+        /*background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), white, rgba(255, 255, 255, 0.5));*/
         margin: 0;
       /*  font-family: var(--work-sans);
       font-weight: 300;
@@ -274,7 +274,7 @@ p
 .info-sections {
     max-width: 100%;
     margin-top: 8rem;
-    background-color: white;
+    background-color: rgba(255,255,255, 0.5);
     height: auto;
     padding: 10px 50px;
 }
@@ -297,7 +297,7 @@ p
 
 
 .services-subsection {
-    background-color: white;
+    /*background-color: rgba(240, 240, 240, 0.5);*/
     margin: 0px 30px;
 }
 
@@ -312,8 +312,8 @@ p
 
 
 .testimonial-container {
-    max-width: 100%;
-    background-color: rgba(240, 240, 240, 0.7);
+    background-color: rgba(240, 240, 240, 0.6);
+    margin-bottom: 25px;
 }
 
 
@@ -398,9 +398,24 @@ p
 }
 
 
-.project:hover {
-    opacity: 0.8;
+.project_description {
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity .2s, visibility .2s;
 }
+
+.project__wrap:hover .project_description {
+  visibility: visible;
+  opacity: 1;
+  background: linear-gradient(rgba(240, 240, 240, 0.5), rgba(240, 240, 240, 0.5));
+
+}
+
+.project__wrap:hover .project_image {
+  opacity: 0.5;
+
+}
+
 
 
 #info {
