--- a/flaskr/templates/contact.html
+++ b/flaskr/templates/contact.html
@@ -14,7 +14,7 @@
         <div class="container-md text-center" style="max-width: 100%;">
             <div class="row justify-content-start">
                 <div class="col-md-auto ">
-                    <h1 class="screen_titles text-light" style="font-weight: 600;">Contact Us</h1>
+                    <h1 class="screen_titles" style="font-weight: 600;">Contact Us</h1>
                 </div>
             </div>
         </div>
@@ -109,8 +109,8 @@
             </div>
         </div>
 -->
-        <div class="row justify-content-start" style="margin-top: 5rem; margin-bottom: 8rem;">
-            <div class="col-md" style="padding-left: 30px;">
+        <div class="row justify-content-center text-center" style="margin-top: 3rem; margin-bottom: 8rem;">
+            <div class="col-md" style="">
                 <div class="font-med-bold">
                     <p class="text-md">
                         Follow us on Facebook
@@ -132,10 +132,14 @@
                 </div>
             </div>
         </div>
-        <div class="row justify-content-center">
-            <div class="col-md" style="text-align: center;">
+        <div class="row justify-content-between" style="text-align: center; padding-bottom: 30px;">
+            <div class="col-md" style="">
                 <img class="img-fluid" src="{{ url_for('static', filename='contact-images/award.png') }}" alt="" style="max-height: 10rem;">
             </div>
+            <div class="col-md">
+                <img class="img-fluid" src="{{ url_for('static', filename='logo/FullLogo_Transparent_NoBuffer.png') }}" alt="" style="max-height: 10rem;">
+            </div>
+
 
         </div>
     </div>
