--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -93,17 +93,17 @@
     <div class="container-md" style="max-width:100%; padding: 0px 20px;">
         <div class="row justify-content-center">
             {% for project, thumbnail in project_data %}
-            <div class="col-md-4 img-thumbnail" style="padding: 15px 15px; margin-top: 3%; margin-bottom: 3%; background-image: url({{ thumbnail }}); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
+            <div class="col-md-4 img-thumbnail project__wrap" style="padding: 15px 15px; margin-top: 3%; margin-bottom: 3%; background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0)), url({{ thumbnail }}); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
                 <a href="{{ url_for('blueprint.view_project', project_id=project[0]) }}" style="text-decoration: none;" class="text-dark">
-                    <div class="row justify-content-center text-center">
-                        <h5 class="text-center font-med-bold">{{ project[1] }}</h5>
+                    <div class="row justify-content-center text-center project_description" style="margin-bottom: 30px; border: 1px solid black;">
+                        <h5 class="text-center font-med-bold ">{{ project[1] }}</h5>
                         <p class="text-md">{{ project[4] }}, NH</p>
                         <!--<img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="">-->
 
                     </div>
-                    <div class="row text-center" style="margin-top: 10%;">
+                    <div class="row align-items-center text-center" style="">
                         <div class="col-sm">
-                            <button class="buttons btn btn-primary"
+                            <button class="buttons btn btn-outline-primary"
                                 data-callback='onSubmit'
                                 data-action='submit'>View Project</button>
                         </div>
