--- a/flaskr/templates/testimonials.html
+++ b/flaskr/templates/testimonials.html
@@ -20,12 +20,12 @@
     </header>
 
             <!--testimonials-->
-    <div class="container-md" style="max-width: 100%; padding: 3% 1rem;">
+    <div class="container-md" style="max-width: 100%;">
         <!--for loop would go here for testimonials, row by row-->
         {% for i in testimonials %}
-        <div class="row justify-content-center text-center" style="padding: 1rem 0px">
+        <div class="row justify-content-center text-center testimonial-container" style="">
             <div class="col-md text-md" style="padding: 2px 100px;"> <!--top right bottom left-->
-                <p style="padding-b: 2%;">"{{ i.message }}"</p>
+                <p>"{{ i.message }}"</p>
 
                 <p><strong>{{ i.name }}</strong> - {{ i.town }}, NH</p>
 
