--- a/flaskr/templates/view_project.html
+++ b/flaskr/templates/view_project.html
@@ -9,14 +9,14 @@
         <div class="container-md" style="margin: 10px 10px">
             <div class="row text-center">
                 <div class="col-sm-auto" style="padding:0;">
-                    <div style="background-color: rgba(255,255,255,.8);">
+                    <div style="background-color: rgba(255,255,255,0.0);">
                         <h1 style="font-weight: 600;" class="">{{ project_name }}</h1>
                     </div>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-sm-auto" style="padding:0;">
-                    <div style="background-color: rgba(255,255,255,.8);">
+                    <div style="background-color: rgba(255,255,255, 0.0);">
                         <h3>{{ project_town }}, NH</h3>
                     </div>
                 </div>
