--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -34,12 +34,19 @@ body
 p
 {
     font-size: 1.4rem;
+    /*font-size: 18px;*/
     /*display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;*/
 
+}
+
+@media screen and (max-width: 600px) {
+    p {
+        font-size: 1rem;
+    }
 }
 
 
@@ -313,8 +320,10 @@ p
 
 .testimonial-container {
     background-color: rgba(240, 240, 240, 0.6);
-    margin-bottom: 25px;
+    margin-bottom: 5rem;
 }
+
+
 
 
 
