--- a/flaskr/templates/testimonials.html
+++ b/flaskr/templates/testimonials.html
@@ -20,11 +20,11 @@
     </header>
 
             <!--testimonials-->
-    <div class="container-md" style="max-width: 100%;">
+    <div class="container-md" style="max-width: 100%; margin-top: 10%;">
         <!--for loop would go here for testimonials, row by row-->
         {% for i in testimonials %}
         <div class="row justify-content-center text-center testimonial-container" style="">
-            <div class="col-md text-md" style="padding: 2px 100px;"> <!--top right bottom left-->
+            <div class="col-md text-md" style="padding: 5px 12%;"> <!--top/bottom left/right-->
                 <p>"{{ i.message }}"</p>
 
                 <p><strong>{{ i.name }}</strong> - {{ i.town }}, NH</p>
