--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -39,7 +39,7 @@
                                 <div class="row justify-content-center">
                                     <div class="col-md-6" style="padding-bottom: 15.0rem;">
                                         <div style="">
-                                            <h1 style="font-weight: 600;" class="text-dark">Project Gallery</h1>
+                                            <h1 style="font-weight: 600;" class=" gallery_title">Project Gallery</h1>
                                         </div>
 
                                     </div>
