--- a/flaskr/templates/testimonials.html
+++ b/flaskr/templates/testimonials.html
@@ -8,12 +8,12 @@
 
 <div id="main-content" class="" style="">
     <!--title banner-->
-    <header class="screen_title">
+    <header class="screen_title_container">
         {% include 'includes/_messages.html' %}
         <div class="container-md text-center" style="max-width: 100%;">
             <div class="row justify-content-start">
                 <div class="col-md-auto ">
-                    <h1 class="screen_titles text-dark" style="font-weight: 600;">Testimonials</h1>
+                    <h1 class="screen_title text-dark" style="">Testimonials</h1>
                 </div>
             </div>
         </div>
