--- a/flaskr/templates/contact.html
+++ b/flaskr/templates/contact.html
@@ -9,12 +9,12 @@
 
 <div id="main-content" class="main-content" style="">
     <!--title banner-->
-    <header class="screen_title">
+    <header class="screen_title_container">
         {% include 'includes/_messages.html' %}
         <div class="container-md text-center" style="max-width: 100%;">
             <div class="row justify-content-start">
                 <div class="col-md-auto ">
-                    <h1 class="screen_titles" style="font-weight: 600;">Contact Us</h1>
+                    <h1 class="screen_title" style="">Contact Us</h1>
                 </div>
             </div>
         </div>
@@ -36,6 +36,7 @@
                     </p>
                 </div>
                 <div class="font-med-bold">
+                    <p>Allan Gilbert, Owner</p>
                     <p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
                           <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
