--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -41,11 +41,11 @@
 
 <body class="d-flex flex-column min-vh-100"
 		{% if active_page == 'testimonials' %}
-			style="background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0)), url({{url_for('static', filename='background-images/ceiling long.png')}});
-				background-size: cover; background-attachment: fixed; background-repeat: no-repeat;"
+			style="background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0)), url({{url_for('static', filename='background-images/water view.jpg')}});
+				background-size: cover; background-attachment: fixed; background-repeat: no-repeat; background-position: 50% 50%;"
 		{% elif active_page == 'home' %}
 			style="background-image: url({{url_for('static', filename='background-images/IMG_8106.jpg')}});
-    background-repeat: no-repeat; background-size: cover; background-attachment: fixed; background-position: 50% 50%;"
+    background-repeat: no-repeat; background-size: cover; background-attachment: fixed;"
 		{% elif active_page == 'gallery' %}
 			style="background: url({{url_for('static', filename='background-images/pexels-pixabay-235994.jpg')}});
 					 " `
