--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -169,9 +169,17 @@ p
   }
 
   .text-xl {
-    font-size: 1.2rem;
-    line-height: 1.75rem;
+    font-size: 1.42rem;
+    line-height: 1.55em;
   }
+
+  @media screen and (max-width: 600px) {
+    .text-xl {
+        font-size: 1.2rem;
+        line-height: 1.95rem;
+    }
+}
+
 
   .text-md {
     font-size: 1.1rem;
@@ -294,7 +302,7 @@ p
 .info-sections {
     max-width: 100%;
     margin-top: 8rem;
-    background-color: rgba(255,255,255, 0.5);
+    background-color: rgba(255,255,255, 0.7);
     height: auto;
     padding: 10px 50px;
 }
@@ -306,20 +314,17 @@ p
 
 .info-title-hr {
     overflow: visible; /* For IE */
-    max-width: 10%;
+    max-width: 20%;
     padding: 0;
     /*border: 2px solid;*/
     border-top: medium double;
-    /*color: #333;*/
+    color: #333;
     text-align: center;
 
 }
 
 
-.services-subsection {
-    /*background-color: rgba(240, 240, 240, 0.5);*/
-    margin: 0px 30px;
-}
+
 
 .services-subsection-title {
     padding-top: 10px;
@@ -409,6 +414,11 @@ p
 
 .gallery_title {
     -webkit-text-stroke: 1px black;
+}
+
+.project_link {
+    -webkit-text-stroke: 0.1px black;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4));
 }
 
 .carousel .carousel-item {
