--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -11,13 +11,13 @@
         <div class="container-md info-sections" style="">
             <div class="row justify-content-center">
                 <div class="col-md info-sections-title">
-                    <h1 class="display-6 font-medium">Welcome to Allan Gilbert Builders</h1>
+                    <h1 class="display-5 font-medium">Welcome to Allan Gilbert Builders</h1>
                     <hr class="info-title-hr">
                 </div>
             </div>
             <div class="row">
-                <div class="col-md">
-                    <p>
+                <div class="col-md-10">
+                    <p class="text-xl">
                     At Allan Gilbert Builders, we are more than just builders; we are artisans
                     dedicated to creating exceptional living spaces. With over three decades
                     of experience, we’ve been transforming dreams into beautifully
@@ -30,13 +30,13 @@
         <div class="container-md info-sections" style="">
             <div class="row justify-content-center">
                 <div class="col-md info-sections-title">
-                    <h1 class="display-6 font-medium">About Us</h1>
+                    <h1 class="display-4 font-medium">About Us</h1>
                     <hr class="info-title-hr">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md">
-                    <p>
+                    <p class="text-xl">
                         Our story is one of passion, craftsmanship and a commitment to
                         excellence. A family owned and operated business, three generations
                         and growing, we have been dedicated to crafting exceptional living
@@ -49,13 +49,13 @@
         <div class="container-md info-sections" style="">
             <div class="row justify-content-center">
                 <div class="col-md info-sections-title">
-                    <h1 class="display-6 font-medium">Our Services</h1>
+                    <h1 class="display-4 font-medium">Our Services</h1>
                     <hr class="info-title-hr">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md">
-                    <p>
+                    <p class="text-xl">
                         At Allen Gilbert Builders, we take pride in offering a comprehensive
                         range of construction and remodeling services tailored to meet your
                         unique needs and preferences. Our experienced team of professionals is
@@ -66,8 +66,8 @@
             </div>
             <!--home building-->
             <div class="container-md">
-                <div class="row">
-                    <div class="col-md font-med-bold">
+                <div class="row justify-content-center">
+                    <div class="col-md-10 font-med-bold">
                         <!--which icon?-->
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-house-gear-fill" viewBox="0 0 16 16">
                               <path d="M7.293 1.5a1 1 0 0 1 1.414 0L11 3.793V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v3.293l2.354 2.353a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708z"/>
@@ -75,12 +75,12 @@
                               <path d="m13.158 9.608-.043-.148c-.181-.613-1.049-.613-1.23 0l-.043.148a.64.64 0 0 1-.921.382l-.136-.074c-.561-.306-1.175.308-.87.869l.075.136a.64.64 0 0 1-.382.92l-.148.045c-.613.18-.613 1.048 0 1.229l.148.043a.64.64 0 0 1 .382.921l-.074.136c-.306.561.308 1.175.869.87l.136-.075a.64.64 0 0 1 .92.382l.045.149c.18.612 1.048.612 1.229 0l.043-.15a.64.64 0 0 1 .921-.38l.136.074c.561.305 1.175-.309.87-.87l-.075-.136a.64.64 0 0 1 .382-.92l.149-.044c.612-.181.612-1.049 0-1.23l-.15-.043a.64.64 0 0 1-.38-.921l.074-.136c.305-.561-.309-1.175-.87-.87l-.136.075a.64.64 0 0 1-.92-.382ZM12.5 14a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3"/>
                             </svg>
 
-                        <p class="services-subsection-title">Home Building</p>
+                        <h1 class="display-5 font-medium services-subsection-title">Home Building</h1>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md">
-                        <p>
+                <div class="row justify-content-center">
+                    <div class="col-md-10">
+                        <p class="text-xl">
                             We are a customer-focused company.  By using  superior materials, equipment and reputable
                             subcontractors we specialize in building custom homes that are not only structural but
                             reflective of our homeowner’s lifestyle and personality.
@@ -88,16 +88,16 @@
                     </div>
                 </div>
             <!--general contracting-->
-                <div class="row">
-                    <div class="col-md font-med-bold">
+                <div class="row justify-content-center">
+                    <div class="col-md-10 font-med-bold">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-file-earmark-text-fill" viewBox="0 0 16 16">
                           <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0M9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1M4.5 9a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1zM4 10.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 1 0-1h4a.5.5 0 0 1 0 1z"/>
                         </svg>
                         <p class="services-subsection-title">General Contracting</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md">
+                <div class="row justify-content-center">
+                    <div class="col-md-10">
                         <p>
                             Fully licensed and insured, with Allan Gilbert Builders you can take advantage of multiple
                             services without any worries. With complete dedication,  we provide general contractor and
