--- a/flaskr/templates/testimonials.html
+++ b/flaskr/templates/testimonials.html
@@ -11,7 +11,7 @@
     <header class="screen_title_container">
         {% include 'includes/_messages.html' %}
         <div class="container-md text-center" style="max-width: 100%;">
-            <div class="row justify-content-start">
+            <div class="row justify-content-center">
                 <div class="col-md-auto ">
                     <h1 class="screen_title text-dark" style="">Testimonials</h1>
                 </div>
@@ -20,7 +20,7 @@
     </header>
 
             <!--testimonials-->
-    <div class="container-md" style="max-width: 100%; margin-top: 10%;">
+    <div class="container-md" style="max-width: 100%; margin-top: 5%;">
         <!--for loop would go here for testimonials, row by row-->
         {% for i in testimonials %}
         <div class="row justify-content-center text-center testimonial-container" style="">
