--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -302,7 +302,7 @@ p
 .info-sections {
     max-width: 100%;
     margin-top: 8rem;
-    background-color: rgba(255,255,255, 0.7);
+    background-color: rgba(255,255,255, 0.9);
     height: auto;
     padding: 10px 50px;
 }
@@ -315,11 +315,12 @@ p
 .info-title-hr {
     overflow: visible; /* For IE */
     max-width: 20%;
+    height: 20px;
+    margin-left:0;
     padding: 0;
     /*border: 2px solid;*/
-    border-top: medium double;
-    color: #333;
-    text-align: center;
+    border-top: 7px double #FF7D1A;
+    text-align: left;
 
 }
 
@@ -418,7 +419,8 @@ p
 
 .project_link {
     -webkit-text-stroke: 0.1px black;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4));
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.0));
+
 }
 
 .carousel .carousel-item {
