--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -45,8 +45,8 @@
                                     </div>
                                 </div>
                                 <div class="row justify-content-end">
-                                    <div class="col-sm" style="">
-                                        <p class="text-lg font-med-bold project_link" style=""><a href="{{ url_for('blueprint.view_project', project_id=photo.project_id) }}">{{photo.project_name}}</a></p>
+                                    <div class="col-sm-auto" style="">
+                                        <p class="text-lg font-med-bold project_link" style=""><a href="{{ url_for('blueprint.view_project', project_id=photo.project_id) }}" class="text-light">{{photo.project_name}}</a></p>
                                     </div>
                                 </div>
                             </div>
