--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -190,6 +190,11 @@ p
     line-height: 1.25rem;
   }
 
+  .text-xs {
+    font-size: .775rem;
+    line-height: 1.25rem;
+  }
+
   .text-normal {
     font-size: 1.0rem;
     line-height: 1.25rem;
@@ -221,6 +226,7 @@ p
 
   .form-labels {
     margin-right: 15px;
+    margin-bottom: 0;
   }
 
   textarea {
@@ -477,4 +483,8 @@ p
 .form-check-input:hover {
     background-color: rgba(255,255,255,.5);
     border-color: blue;
+}
+
+.upload_bg {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(255, 255, 255, 0.4), rgba(0, 0, 0, 0.0));
 }
