--- a/flaskr/templates/admin.html
+++ b/flaskr/templates/admin.html
@@ -2,24 +2,43 @@
 {% set active_page = "admin" %}
 {% block body %}
 
+<!--replace background-->
+{% from "includes/_formhelpers.html" import render_field %}
+<div class="" style="max-width: 100%;">
+    <form method="post" action="" class="" enctype="multipart/form-data">
+        <div class="row justify-content-end" style="font-weight: 500;">
+            <div class="col-3 form-labels bg-light bg-opacity-50" style="text-align: right;">
+                    <p class="font-med-bold text-normal">Change Background</p>
+                {{ image_form.bg_image(class="form-control", style="font-size: 10px;") }}
+                    <button class="buttons btn btn-outline-primary btn-sm"
+                    data-callback='onSubmit'
+                    data-action='submit'
+                    name="upload-bg-image" style="">Upload</button>
+
+            </div>
+        </div>
+    </form>
+</div>
+
+
 <div>
    {% include 'includes/_messages.html' %}
 
-    <h1>Admin Portal</h1>
+    <h1 class="text-light">Admin Portal</h1>
     <hr>
-    <h4 class="font-weight-lighter p-3">Hi, {{ name }}.
-        <br> You can approve pending testimonials here.
+    <h4 class="font-weight-lighter p-3 text-light bg-dark bg-opacity-50">Hi, {{ name }}.
+        <br> You can send testimonial requests, add a new project, and approve pending testimonials here.
     </h4>
     <br>
 </div>
 
 
-<div class="container-md" style="max-width: 100%;">
+<div class="container-md bg-dark bg-opacity-50" style="max-width: 100%; margin-bottom: 15px;">
     <form method="post" action="" class="">
         {% for field in form %}
         <div class="row align-items-center">
             <div class="col-md-auto text-md admin-forms font-med-bold">
-                <label>Send a testimonial request</label>
+                <label class="text-light">Send a testimonial request</label>
             </div>
             <div class="row align-items-start admin-forms" style="margin: 1px 10px; padding-right: 15px;">
                 <div class="col-md-auto">
@@ -35,11 +54,11 @@
 </div>
 
 {% from "includes/_formhelpers.html" import render_field %}
-<div class="container-md" style="margin-bottom: 20px; max-width: 100%;">
+<div class="container-md bg-dark bg-opacity-75" style="margin-bottom: 20px; max-width: 100%;">
         <div class="row align-items-end">
             <!--{% from "includes/_formhelpers.html" import render_field %}-->
             <div class="col-md-auto text-md admin-forms font-med-bold" style="margin-top: 10px;">
-                <h1 class="display-6">Add a Project</h1>
+                <h1 class="display-6 text-light">Add a Project</h1>
             </div>
         </div>
         <div class="row align-items-end">
@@ -51,14 +70,9 @@
     <form method="post" action="" class="" enctype="multipart/form-data">
         <div class="row justify-content-evenly text-md" style="font-weight: 500; margin: 0px 10px;">
 
-<!--
-            <div class="col-md-3 form-labels" id="tab_2" data-tab-info>
-                {{ image_form.project(style="width:100%; height: 100%;") }}
-            </div>
--->
             <div class="col-md-auto form-labels active" id="tab_1" data-tab-info style="">
                 <div class="col-md-auto form-labels font-med-bold text-center" style="font-size: 20px; padding-top: 0.5%; margin-bottom: 10px;">
-                    <label>{{image_form.project.label}}</label>
+                    <label class="text-light">{{image_form.project.label}}</label>
                 </div>
 
                 <div class="col-md form-labels">
@@ -78,7 +92,7 @@
              <div class="col-md-auto form-labels">
                  <div class="col-md">
                      <div class="col-md-auto form-labels font-med-bold text-center" style="font-size: 20px; padding-top: 0.5%;">
-                        <label>{{image_form.image.label}}</label>
+                        <label class="text-light">{{image_form.image.label}}</label>
                     </div>
                      <div class="col-md">
                          {{ image_form.image(class="form-control", style="margin-top: 5%;", multiple="multiple") }}
@@ -99,8 +113,8 @@
     </form>
 </div>
 
-<div class="container-md admin-forms" style="padding-top: 10px;">
-    <h2 class="display-6">Pending Testimonials</h2>
+<div class="container-md admin-forms bg-dark bg-opacity-75" style="padding-top: 10px; max-width: 100%;">
+    <h2 class="display-6 text-light">Pending Testimonials</h2>
     <div class="container-md" style="padding-top: 20px;">
         {% if pending_testimonials %}
         <table class="table table-hover table-light testimonial-table" align="center">
@@ -111,9 +125,9 @@
                 <tr>
                     <!--<th scope="row">1</th>-->
                   <td class="testimonial-column">
-                      <h3>{{i.name}}<small class="text-muted"> ({{ i.email }}) </small></h3>
-                      <p><i> {{i.town}}, NH</i></p>
-                      <p class="testimonial-content text-center">"{{i.message}}"</p>
+                      <h3 class="text-light">{{i.name}}<small class="text-muted"> ({{ i.email }}) </small></h3>
+                      <p class="text-light"><i> {{i.town}}, NH</i></p>
+                      <p class="testimonial-content text-center text-light">"{{i.message}}"</p>
                   </td>
                   <td class="button-column">
                       <form action="{{ url_for('blueprint.approve_testimonial', testimonial_id=i.testimonial_id) }}" method="post" class="buttons">
@@ -133,7 +147,7 @@
 
         {% else %}
          <br>
-         <h3 align="center">There's nothing pending right now.</h3>
+         <h3 align="center" class="text-light">There's nothing pending right now.</h3>
         {% endif %}
 
     </div>
