--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -9,17 +9,17 @@
         <!--replace background-->
         {% if session.logged_in %}
         {% from "includes/_formhelpers.html" import render_field %}
-        <div class="container-md" style="max-width: 100%;">
+        <div class="" style="max-width: 100%;">
 
             <form method="post" action="" class="" enctype="multipart/form-data">
-                <div class="row justify-content-end text-sm" style="font-weight: 500;">
+                <div class="row justify-content-end" style="font-weight: 500;">
                     <div class="col-3 form-labels" style="text-align: right;">
-                            <p class="text-md">Change Background</p>
-                        {{ image_form.image(class="form-control text-sm") }}
-                            <button class="buttons btn btn-outline-primary"
+                            <p class="font-med-bold text-normal">Change Background</p>
+                        {{ image_form.bg_image(class="form-control", style="font-size: 10px;") }}
+                            <button class="buttons btn btn-outline-primary btn-sm"
                             data-callback='onSubmit'
                             data-action='submit'
-                            name="upload-image">Upload</button>
+                            name="upload-image" style="">Upload</button>
 
                     </div>
                 </div>
