--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -34,12 +34,6 @@ body
 p
 {
     font-size: 1.4rem;
-    /*font-size: 18px;*/
-    /*display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;*/
 
 }
 
@@ -135,7 +129,6 @@ p
       margin-right: 5px;
       width: 100%;
       color: inherit;
-      /*background-color: currentColor;*/
       border: 1;
       opacity: 0.25;
     }
@@ -147,20 +140,6 @@ p
         /*background-color: rgba(240, 240, 240, 1.0);*/
         /*background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), white, rgba(255, 255, 255, 0.5));*/
         margin: 0;
-      /*  font-family: var(--work-sans);
-      font-weight: 300;
-      font-size: 1rem;
-      text-align: center;*/
-      /*
-      position: absolute;
-      *//*bottom: -50px;*//*  *//*move inside the body margin*//*
-      left: 0;
-      right: 0;
-      margin-bottom: 0px;
-      height: 50px;
-      width: 100%;
-      box-sizing: border-box;
-      padding: 1em;*/
     }
 
   .text-lg {
@@ -292,7 +271,6 @@ p
     padding-right: 10px;
     margin-top: 10px;
     display:block;
-    /*background-color: rgba(24, 24, 24, .8);*/
     background-color: var(--brokerColor);
     opacity: 0.9;
 }
@@ -362,32 +340,12 @@ p
 
 
 .testimonial-form{
-    /*margin-bottom: 10%;*/
-    /*max-height: 100%;*/
-    /* background-image: url("../contact-images/IMG_2872.jpg");*/
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
     margin-top: 2%;
     max-width: 100%;
 }
-
-/*
-.pagination-page-info {
-    padding: .6em;
-    padding-left: 0;
-    width: 40em;
-    margin: .5em;
-    margin-left: 0;
-    font-size: 12px;
-}
-.pagination-page-info b {
-    color: black;
-    background: #6aa6ed;
-    padding-left: 2px;
-    padding: .1em .25em;
-    font-size: 150%;
-}*/
 
 
 [data-tab-info] {
@@ -399,25 +357,6 @@ p
 }
 
 
-/*
-.carousel-item img {
-    position: absolute;
-    object-fit: cover;
-    top: 0;
-    left: 0;
-    min-height: 500px;
-}
-*/
-
-/*
-.carousel-banner {
-    position: absolute;
-    object-fit: cover;
-    top: 0;
-    left: 0;
-    min-height: 500px;
-}*/
-
 
 .gallery_title {
     -webkit-text-stroke: 1px black;
@@ -428,6 +367,8 @@ p
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.0));
 
 }
+
+/* carousel */
 
 .carousel .carousel-item {
   height: 450px;
