--- a/flaskr/templates/admin.html
+++ b/flaskr/templates/admin.html
@@ -7,8 +7,8 @@
 <div class="" style="max-width: 100%;">
     <form method="post" action="" class="" enctype="multipart/form-data">
         <div class="row justify-content-end" style="font-weight: 500;">
-            <div class="col-3 form-labels bg-light bg-opacity-50" style="text-align: right;">
-                    <p class="font-med-bold text-normal">Change Background</p>
+            <div class="col-3 form-labels bg-dark bg-opacity-25" style="text-align: right;">
+                    <p class="font-med-bold text-normal text-light">Change Background</p>
                 {{ image_form.bg_image(class="form-control", style="font-size: 10px;") }}
                     <button class="buttons btn btn-outline-primary btn-sm"
                     data-callback='onSubmit'
