--- a/flaskr/templates/gallery.html
+++ b/flaskr/templates/gallery.html
@@ -67,7 +67,7 @@
                                 </div>
                                 <div class="row justify-content-end">
                                     <div class="col-sm-auto" style="">
-                                        <p class="text-lg font-med-bold project_link" style=""><a href="{{ url_for('blueprint.view_project', project_id=photo.project_id) }}" class="text-light">{{photo.project_name}}</a></p>
+                                        <p class="text-lg font-med-bold project_link" style=""><a href="{{ url_for('blueprint.view_project', project_name=photo.project_name) }}" class="text-light">{{photo.project_name}}</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -115,7 +115,7 @@
         <div class="row justify-content-center">
             {% for project, thumbnail in project_data %}
             <div class="col-md-4 img-thumbnail project__wrap" style="padding: 15px 15px; margin-top: 3%; margin-bottom: 3%; background: linear-gradient(rgba(240, 240, 240, 0.0), rgba(240, 240, 240, 0.0)), url({{ thumbnail }}); background-size: cover;"> <!--background-image: url({{ thumbnail }}); background-size: cover;-->
-                <a href="{{ url_for('blueprint.view_project', project_id=project[0]) }}" style="text-decoration: none;" class="text-dark">
+                <a href="{{ url_for('blueprint.view_project', project_name=project[1]) }}" style="text-decoration: none;" class="text-dark">
                     <div class="row justify-content-center text-center project_description" style="margin-bottom: 30px; border: 1px solid black;">
                         <h5 class="text-center font-med-bold ">{{ project[1] }}</h5>
                         <p class="text-md">{{ project[4] }}, NH</p>
