--- a/flaskr/templates/includes/_navbar.html
+++ b/flaskr/templates/includes/_navbar.html
@@ -3,7 +3,7 @@
 <style>
     .navbar_bar {
     {% if active_page == 'home' %}
-        background: linear-gradient(to bottom, rgba(255, 255, 255, 0.0), white, rgba(255, 255, 255, 0.0));
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 0.0), rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.0));
      {% elif active_page == 'testimonials' %}
         background: linear-gradient(to bottom, rgba(255, 255, 255, 0.0), #A1BBCF, rgba(255, 255, 255, 0.0));
     {% elif active_page == 'contact' %}
@@ -22,12 +22,6 @@
             <img class="d-none d-md-block" src="{{ url_for('static', filename='logo/FullLogo_Transparent_NoBuffer.png') }}" alt="Logo" width="150" height="150">
             <img class="d-md-none" src="{{ url_for('static', filename='logo/FullLogo_Transparent_NoBuffer.png') }}" alt="Logo" width="120" height="120">
         </a>
-
-<!--
-        <span class="navbar-text font-med-bold text-xl">
-            Allan Gilbert Builders
-        </span>
--->
 
       <!-- condensed menu button for smaller screens -->
         <button class="navbar-toggler justify-content-end" data-bs-theme="light" type="button" data-bs-toggle="collapse"
