--- a/flaskr/templates/view_all_projects.html
+++ b/flaskr/templates/view_all_projects.html
@@ -17,7 +17,7 @@
         <div class="row">
             {% for project, thumbnail in project_data %}
             <div class="col-md-3">
-                <a href="{{ url_for('blueprint.view_project', project_id=project[0]) }}">
+                <a href="{{ url_for('blueprint.view_project', project_name=project[1]) }}">
                     <h5 class="text-center font-med-bold">{{ project[1] }}</h5>
                     <img class="img-thumbnail" style="" src="{{ thumbnail }}" alt="{{ thumbnail }}">
                 </a>
